# eyeleoapp

./: .clang-format  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  build.bat  build_cmake.bat  build_pugi.bat  clang-format.bat
ActivityMonitorDLL/: ActivityMonitorDLL.vcxproj
libs/activity-monitor/: ActivityMonitorDLL.vcproj  ActivityMonitorDLL.vcxproj.filters  CMakeLists.txt  dllmain.cpp  setup.h  stdafx.cpp
source/: DataLog.cpp  DataLog.h  EyeLeo.sln  EyeLeo.vcproj  EyeLeo.vcxproj  EyesKeeper.vcxproj.filters  IWindow.h  activity_monitor.cpp  activity_monitor.h  beforepause_wnd.cpp  beforepause_wnd.h  bigpause_wnd.cpp  bigpause_wnd.h  debug_wnd.cpp  debug_wnd.h  excercises.cpp  excercises.h  eyecoach_resources.cpp  eyecoach_resources.h  language_set.cpp  language_set.h  main.cpp  main.h
source/code/: DataLog.cpp  DataLog.h  IWindow.h  activity_monitor.cpp  activity_monitor.h  beforepause_wnd.cpp  beforepause_wnd.h  bigpause_wnd.cpp  bigpause_wnd.h  debug_wnd.cpp  debug_wnd.h  excercises.cpp  excercises.h  image_resources.cpp  image_resources.h  language_set.cpp  language_set.h  logging.cpp  logging.h  main.cpp  main.h  minipause_wnd.cpp  minipause_wnd.h  notification_wnd.cpp  notification_wnd.h  oscapabilities.cpp  oscapabilities.h  settings.cpp  settings.h  settings_wnd.cpp  settings_wnd.h  statemachine.cpp  statemachine.h  task_mgr.cpp  task_mgr.h  timeloc.cpp  timeloc.h  waiting_wnd.cpp  waiting_wnd.h
source/project/: EyeLeo.sln  EyeLeo.vcxproj  EyeLeo.vcxproj.filters
source/resource/: minimal.rc  resources.aps
